Block csrf token from all routes
